# parse_990_textract

./: .dockerignore  .gitignore  .pre-commit-config.yaml  990_extractors.csv  990_roadmap.csv  Dockerfile  README.md  bad_parses  debug_notebook.ipynb  download_990_data.py  environment.yml  missing_revenue.csv  pyproject.toml  schedule_f_row_extractors.csv  schedule_f_table_extractors.csv  schedule_f_table_roadmap.csv  template.yaml  validation_data.csv
.aws-sam/: build.toml
output_data/: 990_filing_data-2022-10-13-23:58:36.csv  990_filing_data-2022-10-14-10:51:44.csv  990_filing_data-2022-10-14-12:01:32.csv  990_filing_data-2022-10-14-17:04:34.csv  990_filing_data-2022-10-14-18:16:16.csv  990_filing_data-2022-10-14-21:42:22.csv  990_filing_data_2022-08-08.csv  990_sched_f_part_i_data-2022-10-13-23:58:36.csv  990_sched_f_part_i_data-2022-10-14-10:51:44.csv  990_sched_f_part_i_data-2022-10-14-12:01:32.csv  990_sched_f_part_i_data-2022-10-14-17:04:34.csv  990_sched_f_part_i_data-2022-10-14-18:16:16.csv  990_sched_f_part_i_data-2022-10-14-21:42:22.csv  990_sched_f_part_ii_data-2022-10-13-23:58:36.csv  990_sched_f_part_ii_data-2022-10-14-10:51:44.csv  990_sched_f_part_ii_data-2022-10-14-12:01:32.csv  990_sched_f_part_ii_data-2022-10-14-17:04:34.csv  990_sched_f_part_ii_data-2022-10-14-18:16:16.csv  990_sched_f_part_ii_data-2022-10-14-21:42:22.csv  990_sched_f_part_iii_data-2022-10-13-23:58:36.csv  990_sched_f_part_iii_data-2022-10-14-10:51:44.csv  990_sched_f_part_iii_data-2022-10-14-12:01:32.csv  990_sched_f_part_iii_data-2022-10-14-17:04:34.csv  (+2 more)
(+16 files in other folders)
