[tool.poetry]
name = "parse-990-textract"
version = "0.1.0"
description = "A package for parsing 990s OCRed with AWS Textract"
authors = ["Ethan Corey"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "parse_990_textract"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
boto3 = "^1.24.89"
pandas = "^1.5.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
