[tool.poetry]
name = "parse-990-textract"
version = "0.1.0"
description = "A package for parsing 990s OCRed with AWS Textract"
authors = ["Ethan Corey"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "parse_990_textract"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
boto3 = "^1.24.89"
pandas = "^1.5.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pycodestyle = "^2.9.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
flake8-comprehensions = "^3.10.0"
flake8-simplify = "^0.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
